--- a/assignments/w03/main.css
+++ b/assignments/w03/main.css
@@ -33,9 +33,9 @@ main {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-flex-flow: column nowrap nowrap;
-  -ms-flex-flow: column nowrap nowrap;
-  flex-flow: column nowrap nowrap; }
+  -webkit-flex-flow: column nowrap;
+  -ms-flex-flow: column nowrap;
+  flex-flow: column nowrap; }
   @media (min-width: 768px) {
     main {
       position: absolute;
