Micah minor tweaks
Mostly margins trying to fix the page width

--- a/zen-garden/scss/style.scss
+++ b/zen-garden/scss/style.scss
@@ -28,7 +28,7 @@ body {
 
 header {
     //Pretty cool sun right?
-    padding: 1em 0 2em 0;
+    padding: 1em 0;
     width: auto;
     text-align: center;
     color: $alt-font-color;
