--- a/zen-garden/scss/style.css
+++ b/zen-garden/scss/style.css
@@ -18,7 +18,7 @@ body {
   margin: auto; }
 
 header {
-  padding: 1em 0 2em 0;
+  padding: 1em 0;
   width: auto;
   text-align: center;
   color: blue;
