styles basic layout complete

--- a/zen-garden/scss/style.css
+++ b/zen-garden/scss/style.css
@@ -1,6 +1,8 @@
 /* This file currently writes to a CSS file in the same folder, this is just for testing purposes while I have watch enabled.
-/*variables
-*/
+/*variables*/
+/*color variables*/
+/*breakpoints */
+/* Mixins  */
 /*breakpoints
 
 */
