--- a/zen-garden/WEBSITE zen-garden _group #6/scss/partials/_layout.scss
+++ b/zen-garden/WEBSITE zen-garden _group #6/scss/partials/_layout.scss
@@ -6,8 +6,8 @@
 }
 
 
-@include breakpoint(medium) {
-	
+// @include breakpoint(medium) {
+
 //*first part of 1-3 rows*//
 .intro {
 	grid-row: 2 / 3;
@@ -53,13 +53,13 @@
 		}
 	}
 
-	//Sidebar 
+	//Sidebar
 	.sidebar {
 		&.wrapper {
 			&.design-selection {
 				&.select {     //Select a Design
 					grid-row: 3 / 8;
-					grid-column: 7 / 10;	
+					grid-column: 7 / 10;
 				}
 			}
 			&.design-archives {
@@ -82,4 +82,4 @@
 		grid-row: 9 / 10;
 		grid-column: 3 / 8;
 	}
-}
+//}
