fixed the grids. (created working nested grid system)

--- a/zen-garden/zen-garden2/scss/style.scss
+++ b/zen-garden/zen-garden2/scss/style.scss
@@ -16,9 +16,9 @@
 
 
 body {
-    display: flex;
-    flex-flow: column;
-    align-items: flex-start;
+    // display: flex;
+    // flex-flow: column;
+    // align-items: flex-start;
     background-color: $main-bg;
     color: $font-color;
 
@@ -147,7 +147,3 @@ header {
 //.design-archives{}
 
 //.zen-resources{};
-
-
-
-
