--- a/zen-garden/zen-garden2/scss/partials/_layout.scss
+++ b/zen-garden/zen-garden2/scss/partials/_layout.scss
@@ -1,102 +1,161 @@
-.page-wrapper {
-
-}
-
-
-
+// Example of Nested code used on gridbyexample.com
+// .wrapper {
+//         display: grid;
+//     grid-gap: 10px;
+//         grid-template-columns: repeat(4, [col] 150px ) ;
+//         grid-template-rows: repeat(2, [row] auto  );
+//         background-color: #fff;
+//         color: #444;
+//     }
+//
+//     .box {
+//         background-color: #444;
+//         color: #fff;
+//         border-radius: 5px;
+//         padding: 20px;
+//         font-size: 150%;
+//
+//     }
+//
+//     .box .box {
+//         background-color: #ccc;
+//         color: #444;
+//     }
+//
+//     .a {
+//         grid-column: col / span 2;
+//         grid-row: row;
+//     }
+//
+//     .b {
+//         grid-column: col 3 / span 2;
+//         grid-row: row;
+//     }
+//
+//     .c {
+//         grid-column: col / span 2;
+//         grid-row: row 2;
+//     }
+//
+//     .d{
+//         grid-column: col 3 / span 2;
+//         grid-row: row 2;
+//         display: grid;
+//     grid-gap: 10px;
+//         grid-template-columns: 1fr 1fr;
+//     }
+//
+//     .e {
+//         grid-column: 1 / 3;
+//         grid-row: 1;
+//     }
+//
+//     .f {
+//         grid-column: 1;
+//         grid-row: 2;
+//     }
+//
+//     .g {
+//         grid-column: 2;
+//         grid-row: 2;
+//     }
 
 
 //*first part of 1-3 rows*//
-.intro {
-    display: grid;
-    grid-template-columns: repeat(12, 8.3%);
-    grid-template-rows: repeat(8, 12.5vh);  //* 5 even rows. *//
-    width: 100vw;
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: grid;
+.page-wrapper {
+        display: grid;
+    grid-gap: 5px;
+        grid-template-columns: repeat(12, [col] 8.3333% ) ;
+        grid-template-rows: repeat(9, [row] 100px  );
 
-    &>header {
-        grid-row: 1 / 3;
-        grid-column: 1 / 6;
+    }
+
+    .intro {
+      grid-column: col 1 / span 5;
+    display: grid;
+    grid-gap: 5px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+
+    header {
+        grid-column: 1 / 5;
+        grid-row: 1;
         width: 100%;
             }
 
-    &>.summary {
-        grid-row: 4 / 6;
-        grid-column: 1 / 6;
+    .summary {
+        grid-column: 1 / 4;
+        grid-row: 2;
           }
 
-    &>.preamble {
-        grid-row: 6 / 8 ;
-        grid-column: 1 / 6;
+    .preamble {
+        grid-column: 1 / 4;
+        grid-row: 3;
           }
-}
+
 
     //second part of 4-8 rows
     .main {
-        grid-template-columns: repeat(12, 1fr);
-        grid-template-rows: repeat(8, 12.5vh);  //* 5 even rows. *//
-        width: 100vw;
-        position: absolute;
-        top: 0;
-        left: 0;
-        grid-row: 1 / 9;
-        grid-column: 7 / 9;
+      grid-column: col 5 / span 3;
+    display: grid;
+    grid-gap: 5px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
 
-        &>.explanation {      //So What is This About?
-            grid-row: 4 / 9;
-            grid-column: 2 / 9;
+        .explanation {      //So What is This About?
+            grid-column: 1 / 2;
+            grid-row: 1;
         }
 
-        &>.participation  {   //Participation
-            grid-row: 4 / 9;
-            grid-column: 3 / 9;
+        .participation  {   //Participation
+            grid-column: 3 / 4;
+            grid-row: 1;
         }
-        &>.benefits  {        //Benefits
-            grid-row: 4 / 9;
-            grid-column: 4 / 9;
+        .benefits  {        //Benefits
+            grid-column: 1 / 2;
+            grid-row: 2
         }
-        &>.requirements  {    //Requirements
-            grid-row: 4 / 9;
-            grid-column: 5 / 9;
+        .requirements  {    //Requirements
+            grid-column: 3 / 4;
+            grid-row: 2
         }
-    }
+
 
     //Sidebar
     .sidebar {
-        grid-template-columns: repeat(12, 1fr);
-        grid-template-rows: repeat(8, 1fr);  //* 5 even rows. *//
-        width: 100vw;
-        position: absolute;
-        top: 0;
-        left: 0;
-        &.wrapper {
-            &.design-selection {
-                &.select {     //Select a Design
-                    grid-row: 3 / 8;
-                    grid-column: 7 / 10;
-                }
+      grid-column: col 11 / span 3;
+    display: grid;
+    grid-gap: 5px;
+    grid-template-columns: 1fr 1fr;
+}
+
+      .wrapper {
+        background-color: lightgray;
+
+            &> .design-selection {
+                 //Select a Design
+                    grid-column:  1/ 2;
+                    grid-row: 1;
+
+
             }
-            &.design-archives {
-                &.archives {      //Archives
-                    grid-row: 4 / 8;
-                    grid-column: 7 / 10;
-                }
+            &> .design-archives {
+                     //Archives
+                    grid-column: 1 / 2;
+                    grid-row: 2;
+
             }
             &.zen-resources {
-                &.resources { //Resources
-                    grid-row: 5 / 8;
-                    grid-column: 7 / 10;
-                }
+                 //Resources
+                    grid-column: 1 / 2;
+                    grid-row: 3;
+
             }
         }
-    }
+
 
     //Footer
     footer  {
         grid-row: 9 / 10;
         grid-column: 3 / 8;
     }
-
