--- a/zen-garden/zen-garden2/scss/partials/_typography.scss
+++ b/zen-garden/zen-garden2/scss/partials/_typography.scss
@@ -35,7 +35,6 @@ h3{
   padding: 10px;
   font-family: $titles;
   font-size: 40px;
-  // font-style: bold;
   text-align: left;
 }
 
@@ -43,8 +42,21 @@ a{
   text-decoration: none;
 }
 a:hover{
+  display: inline-block;
   color: coral;
   font-weight: bold;
   font-size: 36px;
-  transform: rotate(5deg) scale(1);
+  transform: perspective(3px) translateZ(0) scale(1);
+  transition-duration: 1s;
+  transition-property: transform;
+}
+.hvr-backward:hover, .hvr-backward:focus, .hvr-backward:active {
+  transform: translateX(-8px);
+}
+
+li{list-style-type: none;}
+
+.design-name{  background-color: gray;
+border-radius: 50%;
+  padding: 2px;
 }
