--- a/zen-garden/zen-garden2/scss/style.css
+++ b/zen-garden/zen-garden2/scss/style.css
@@ -34,80 +34,97 @@ a {
   text-decoration: none; }
 
 a:hover {
+  display: inline-block;
   color: coral;
   font-weight: bold;
   font-size: 36px;
-  transform: rotate(5deg) scale(1); }
+  transform: perspective(3px) translateZ(0) scale(1);
+  transition-duration: 1s;
+  transition-property: transform; }
+
+.hvr-backward:hover, .hvr-backward:focus, .hvr-backward:active {
+  transform: translateX(-8px); }
+
+li {
+  list-style-type: none; }
+
+.design-name {
+  background-color: gray;
+  border-radius: 50%;
+  padding: 2px; }
 
 /* Mixins  */
 /*layout */
-.intro {
+.page-wrapper {
   display: grid;
-  grid-template-columns: repeat(12, 8.3%);
-  grid-template-rows: repeat(8, 12.5vh);
-  width: 100vw;
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: grid; }
-  .intro > header {
-    grid-row: 1 / 3;
-    grid-column: 1 / 6;
-    width: 100%; }
-  .intro > .summary {
-    grid-row: 4 / 6;
-    grid-column: 1 / 6; }
-  .intro > .preamble {
-    grid-row: 6/8;
-    grid-column: 1 / 6; }
+  grid-gap: 5px;
+  grid-template-columns: repeat(12, [col] 8.3333%);
+  grid-template-rows: repeat(9, [row] 100px); }
+
+.intro {
+  grid-column: col 1 / span 5;
+  display: grid;
+  grid-gap: 5px;
+  grid-template-columns: 1fr 1fr 1fr 1fr; }
+
+header {
+  grid-column: 1 / 5;
+  grid-row: 1;
+  width: 100%; }
+
+.summary {
+  grid-column: 1 / 4;
+  grid-row: 2; }
+
+.preamble {
+  grid-column: 1 / 4;
+  grid-row: 3; }
 
 .main {
-  grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: repeat(8, 12.5vh);
-  width: 100vw;
-  position: absolute;
-  top: 0;
-  left: 0;
-  grid-row: 1 / 9;
-  grid-column: 7 / 9; }
-  .main > .explanation {
-    grid-row: 4 / 9;
-    grid-column: 2 / 9; }
-  .main > .participation {
-    grid-row: 4 / 9;
-    grid-column: 3 / 9; }
-  .main > .benefits {
-    grid-row: 4 / 9;
-    grid-column: 4 / 9; }
-  .main > .requirements {
-    grid-row: 4 / 9;
-    grid-column: 5 / 9; }
+  grid-column: col 5 / span 3;
+  display: grid;
+  grid-gap: 5px;
+  grid-template-columns: 1fr 1fr 1fr 1fr; }
+
+.explanation {
+  grid-column: 1 / 2;
+  grid-row: 1; }
+
+.participation {
+  grid-column: 3 / 4;
+  grid-row: 1; }
+
+.benefits {
+  grid-column: 1 / 2;
+  grid-row: 2; }
+
+.requirements {
+  grid-column: 3 / 4;
+  grid-row: 2; }
 
 .sidebar {
-  grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: repeat(8, 1fr);
-  width: 100vw;
-  position: absolute;
-  top: 0;
-  left: 0; }
-  .sidebar.wrapper.design-selection.select {
-    grid-row: 3 / 8;
-    grid-column: 7 / 10; }
-  .sidebar.wrapper.design-archives.archives {
-    grid-row: 4 / 8;
-    grid-column: 7 / 10; }
-  .sidebar.wrapper.zen-resources.resources {
-    grid-row: 5 / 8;
-    grid-column: 7 / 10; }
+  grid-column: col 11 / span 3;
+  display: grid;
+  grid-gap: 5px;
+  grid-template-columns: 1fr 1fr; }
+
+.wrapper {
+  background-color: lightgray; }
+  .wrapper > .design-selection {
+    grid-column: 1/ 2;
+    grid-row: 1; }
+  .wrapper > .design-archives {
+    grid-column: 1 / 2;
+    grid-row: 2; }
+  .wrapper.zen-resources {
+    grid-column: 1 / 2;
+    grid-row: 3; }
 
 footer {
   grid-row: 9 / 10;
   grid-column: 3 / 8; }
 
 body {
-  display: flex;
-  flex-flow: column;
-  align-items: flex-start;
   background-color: white;
   color: black; }
 
