Star background init
Added stars

--- a/zen-garden/zen-garden2/scss/partials/_variables.scss
+++ b/zen-garden/zen-garden2/scss/partials/_variables.scss
@@ -1,11 +1,10 @@
 /*color variables*/
-$main-bg: white;
+$main-bg: #041322;
 $secondary-bg: gray;
-$font-color: black;
+$font-color: white;
 $alt-font-color: blue;
 $big-sun: yellow;
 $main-background: red;
 
-
-
-
+/*Star shape variables*/
+$star-color: white;
