--- a/zen-garden/zen-garden2/scss/partials/_layout.scss
+++ b/zen-garden/zen-garden2/scss/partials/_layout.scss
@@ -67,6 +67,7 @@
     grid-gap: 5px;
         grid-template-columns: repeat(12, [col] 8.3333% ) ;
         grid-template-rows: repeat(9, [row] 100px  );
+    max-width: 100vw;
 
     }
 
@@ -75,22 +76,26 @@
     display: grid;
     grid-gap: 5px;
     grid-template-columns: 1fr 1fr 1fr 1fr;
+        @include star(1em, $star-color, 4em, 28em);
   }
 
     header {
         grid-column: 1 / 5;
         grid-row: 1;
         width: 100%;
+        @include star(1em, $star-color, 10em, 26em);
             }
 
     .summary {
         grid-column: 1 / 4;
         grid-row: 2;
+        @include star(1em, $star-color, 13em, 27em);
           }
 
     .preamble {
         grid-column: 1 / 4;
         grid-row: 3;
+        @include star(1em, $star-color, 17em, 27em);
           }
 
 
@@ -105,19 +110,22 @@
         .explanation {      //So What is This About?
             grid-column: 1 / 2;
             grid-row: 1;
+            @include star(1em, $star-color, 20em, 32em);
         }
 
         .participation  {   //Participation
             grid-column: 3 / 4;
             grid-row: 1;
+            @include star(1em, $star-color, 26em, 30em);
         }
         .benefits  {        //Benefits
             grid-column: 1 / 2;
-            grid-row: 2
+            grid-row: 2;
+            @include star(1em, $star-color, 26em, 24em);
         }
         .requirements  {    //Requirements
             grid-column: 3 / 4;
-            grid-row: 2
+            grid-row: 2;
         }
 
 
