--- a/zen-garden/zen-garden2/scss/style.css
+++ b/zen-garden/zen-garden2/scss/style.css
@@ -1,6 +1,7 @@
-/* This file currently writes to a CSS file in the same folder, this is just for testing purposes while I have watch enabled.
+/* This file currently writes to a CSS file in the same folder, this is just for testing purposes while I have watch enabled. */
 /*variables*/
 /*color variables*/
+/*Star shape variables*/
 /*breakpoints */
 /* Typography */
 @import url("https://fonts.googleapis.com/css?family=Abril+Fatface|Nanum+Brush+Script|Nanum+Myeongjo|Nunito+Sans|Permanent+Marker");
@@ -59,26 +60,115 @@ li {
   display: grid;
   grid-gap: 5px;
   grid-template-columns: repeat(12, [col] 8.3333%);
-  grid-template-rows: repeat(9, [row] 100px); }
+  grid-template-rows: repeat(9, [row] 100px);
+  max-width: 100vw; }
 
 .intro {
   grid-column: col 1 / span 5;
   display: grid;
   grid-gap: 5px;
   grid-template-columns: 1fr 1fr 1fr 1fr; }
+  .intro:before {
+    width: 0;
+    height: 0;
+    border-left: 1em solid transparent;
+    border-right: 1em solid transparent;
+    border-bottom: 2em solid white;
+    position: absolute;
+    content: "";
+    top: 28em;
+    left: 4em;
+    z-index: -1; }
+  .intro:after {
+    width: 0;
+    height: 0;
+    border-left: 1em solid transparent;
+    border-right: 1em solid transparent;
+    border-top: 2em solid white;
+    position: absolute;
+    content: "";
+    top: 28.5em;
+    left: 4em;
+    z-index: -1; }
 
 header {
   grid-column: 1 / 5;
   grid-row: 1;
   width: 100%; }
+  header:before {
+    width: 0;
+    height: 0;
+    border-left: 1em solid transparent;
+    border-right: 1em solid transparent;
+    border-bottom: 2em solid white;
+    position: absolute;
+    content: "";
+    top: 26em;
+    left: 10em;
+    z-index: -1; }
+  header:after {
+    width: 0;
+    height: 0;
+    border-left: 1em solid transparent;
+    border-right: 1em solid transparent;
+    border-top: 2em solid white;
+    position: absolute;
+    content: "";
+    top: 26.5em;
+    left: 10em;
+    z-index: -1; }
 
 .summary {
   grid-column: 1 / 4;
   grid-row: 2; }
+  .summary:before {
+    width: 0;
+    height: 0;
+    border-left: 1em solid transparent;
+    border-right: 1em solid transparent;
+    border-bottom: 2em solid white;
+    position: absolute;
+    content: "";
+    top: 27em;
+    left: 13em;
+    z-index: -1; }
+  .summary:after {
+    width: 0;
+    height: 0;
+    border-left: 1em solid transparent;
+    border-right: 1em solid transparent;
+    border-top: 2em solid white;
+    position: absolute;
+    content: "";
+    top: 27.5em;
+    left: 13em;
+    z-index: -1; }
 
 .preamble {
   grid-column: 1 / 4;
   grid-row: 3; }
+  .preamble:before {
+    width: 0;
+    height: 0;
+    border-left: 1em solid transparent;
+    border-right: 1em solid transparent;
+    border-bottom: 2em solid white;
+    position: absolute;
+    content: "";
+    top: 27em;
+    left: 17em;
+    z-index: -1; }
+  .preamble:after {
+    width: 0;
+    height: 0;
+    border-left: 1em solid transparent;
+    border-right: 1em solid transparent;
+    border-top: 2em solid white;
+    position: absolute;
+    content: "";
+    top: 27.5em;
+    left: 17em;
+    z-index: -1; }
 
 .main {
   grid-column: col 5 / span 3;
@@ -89,14 +179,80 @@ header {
 .explanation {
   grid-column: 1 / 2;
   grid-row: 1; }
+  .explanation:before {
+    width: 0;
+    height: 0;
+    border-left: 1em solid transparent;
+    border-right: 1em solid transparent;
+    border-bottom: 2em solid white;
+    position: absolute;
+    content: "";
+    top: 32em;
+    left: 20em;
+    z-index: -1; }
+  .explanation:after {
+    width: 0;
+    height: 0;
+    border-left: 1em solid transparent;
+    border-right: 1em solid transparent;
+    border-top: 2em solid white;
+    position: absolute;
+    content: "";
+    top: 32.5em;
+    left: 20em;
+    z-index: -1; }
 
 .participation {
   grid-column: 3 / 4;
   grid-row: 1; }
+  .participation:before {
+    width: 0;
+    height: 0;
+    border-left: 1em solid transparent;
+    border-right: 1em solid transparent;
+    border-bottom: 2em solid white;
+    position: absolute;
+    content: "";
+    top: 30em;
+    left: 26em;
+    z-index: -1; }
+  .participation:after {
+    width: 0;
+    height: 0;
+    border-left: 1em solid transparent;
+    border-right: 1em solid transparent;
+    border-top: 2em solid white;
+    position: absolute;
+    content: "";
+    top: 30.5em;
+    left: 26em;
+    z-index: -1; }
 
 .benefits {
   grid-column: 1 / 2;
   grid-row: 2; }
+  .benefits:before {
+    width: 0;
+    height: 0;
+    border-left: 1em solid transparent;
+    border-right: 1em solid transparent;
+    border-bottom: 2em solid white;
+    position: absolute;
+    content: "";
+    top: 24em;
+    left: 26em;
+    z-index: -1; }
+  .benefits:after {
+    width: 0;
+    height: 0;
+    border-left: 1em solid transparent;
+    border-right: 1em solid transparent;
+    border-top: 2em solid white;
+    position: absolute;
+    content: "";
+    top: 24.5em;
+    left: 26em;
+    z-index: -1; }
 
 .requirements {
   grid-column: 3 / 4;
@@ -125,8 +281,9 @@ footer {
   grid-column: 3 / 8; }
 
 body {
-  background-color: white;
-  color: black; }
+  position: relative;
+  background-color: #041322;
+  color: white; }
 
 header {
   text-align: center;
