--- a/zen-garden/zen-garden2/scss/partials/_layout.scss
+++ b/zen-garden/zen-garden2/scss/partials/_layout.scss
@@ -62,6 +62,11 @@
 
 
 //*first part of 1-3 rows*//
+.main>*{
+    max-width: 95vw;
+    margin: auto;
+}
+@include breakpoint(medium) {
 .page-wrapper {
         display: grid;
     grid-gap: 5px;
@@ -167,3 +172,4 @@
         grid-row: 9 / 10;
         grid-column: 3 / 8;
     }
+}
