--- a/zen-garden/zen-garden2/scss/style.css
+++ b/zen-garden/zen-garden2/scss/style.css
@@ -56,230 +56,234 @@ li {
 
 /* Mixins  */
 /*layout */
-.page-wrapper {
-  display: grid;
-  grid-gap: 5px;
-  grid-template-columns: repeat(12, [col] 8.3333%);
-  grid-template-rows: repeat(9, [row] 100px);
-  max-width: 100vw; }
+.main > * {
+  max-width: 95vw;
+  margin: auto; }
 
-.intro {
-  grid-column: col 1 / span 5;
-  display: grid;
-  grid-gap: 5px;
-  grid-template-columns: 1fr 1fr 1fr 1fr; }
-  .intro:before {
-    width: 0;
-    height: 0;
-    border-left: 1em solid transparent;
-    border-right: 1em solid transparent;
-    border-bottom: 2em solid white;
-    position: absolute;
-    content: "";
-    top: 28em;
-    left: 4em;
-    z-index: -1; }
-  .intro:after {
-    width: 0;
-    height: 0;
-    border-left: 1em solid transparent;
-    border-right: 1em solid transparent;
-    border-top: 2em solid white;
-    position: absolute;
-    content: "";
-    top: 28.5em;
-    left: 4em;
-    z-index: -1; }
+@media (min-width: 60em) {
+  .page-wrapper {
+    display: grid;
+    grid-gap: 5px;
+    grid-template-columns: repeat(12, [col] 8.3333%);
+    grid-template-rows: repeat(9, [row] 100px);
+    max-width: 100vw; }
 
-header {
-  grid-column: 1 / 5;
-  grid-row: 1;
-  width: 100%; }
-  header:before {
-    width: 0;
-    height: 0;
-    border-left: 1em solid transparent;
-    border-right: 1em solid transparent;
-    border-bottom: 2em solid white;
-    position: absolute;
-    content: "";
-    top: 26em;
-    left: 10em;
-    z-index: -1; }
-  header:after {
-    width: 0;
-    height: 0;
-    border-left: 1em solid transparent;
-    border-right: 1em solid transparent;
-    border-top: 2em solid white;
-    position: absolute;
-    content: "";
-    top: 26.5em;
-    left: 10em;
-    z-index: -1; }
+  .intro {
+    grid-column: col 1 / span 5;
+    display: grid;
+    grid-gap: 5px;
+    grid-template-columns: 1fr 1fr 1fr 1fr; }
+    .intro:before {
+      width: 0;
+      height: 0;
+      border-left: 1em solid transparent;
+      border-right: 1em solid transparent;
+      border-bottom: 2em solid white;
+      position: absolute;
+      content: "";
+      top: 28em;
+      left: 4em;
+      z-index: -1; }
+    .intro:after {
+      width: 0;
+      height: 0;
+      border-left: 1em solid transparent;
+      border-right: 1em solid transparent;
+      border-top: 2em solid white;
+      position: absolute;
+      content: "";
+      top: 28.5em;
+      left: 4em;
+      z-index: -1; }
 
-.summary {
-  grid-column: 1 / 4;
-  grid-row: 2; }
-  .summary:before {
-    width: 0;
-    height: 0;
-    border-left: 1em solid transparent;
-    border-right: 1em solid transparent;
-    border-bottom: 2em solid white;
-    position: absolute;
-    content: "";
-    top: 27em;
-    left: 13em;
-    z-index: -1; }
-  .summary:after {
-    width: 0;
-    height: 0;
-    border-left: 1em solid transparent;
-    border-right: 1em solid transparent;
-    border-top: 2em solid white;
-    position: absolute;
-    content: "";
-    top: 27.5em;
-    left: 13em;
-    z-index: -1; }
+  header {
+    grid-column: 1 / 5;
+    grid-row: 1;
+    width: 100%; }
+    header:before {
+      width: 0;
+      height: 0;
+      border-left: 1em solid transparent;
+      border-right: 1em solid transparent;
+      border-bottom: 2em solid white;
+      position: absolute;
+      content: "";
+      top: 26em;
+      left: 10em;
+      z-index: -1; }
+    header:after {
+      width: 0;
+      height: 0;
+      border-left: 1em solid transparent;
+      border-right: 1em solid transparent;
+      border-top: 2em solid white;
+      position: absolute;
+      content: "";
+      top: 26.5em;
+      left: 10em;
+      z-index: -1; }
 
-.preamble {
-  grid-column: 1 / 4;
-  grid-row: 3; }
-  .preamble:before {
-    width: 0;
-    height: 0;
-    border-left: 1em solid transparent;
-    border-right: 1em solid transparent;
-    border-bottom: 2em solid white;
-    position: absolute;
-    content: "";
-    top: 27em;
-    left: 17em;
-    z-index: -1; }
-  .preamble:after {
-    width: 0;
-    height: 0;
-    border-left: 1em solid transparent;
-    border-right: 1em solid transparent;
-    border-top: 2em solid white;
-    position: absolute;
-    content: "";
-    top: 27.5em;
-    left: 17em;
-    z-index: -1; }
+  .summary {
+    grid-column: 1 / 4;
+    grid-row: 2; }
+    .summary:before {
+      width: 0;
+      height: 0;
+      border-left: 1em solid transparent;
+      border-right: 1em solid transparent;
+      border-bottom: 2em solid white;
+      position: absolute;
+      content: "";
+      top: 27em;
+      left: 13em;
+      z-index: -1; }
+    .summary:after {
+      width: 0;
+      height: 0;
+      border-left: 1em solid transparent;
+      border-right: 1em solid transparent;
+      border-top: 2em solid white;
+      position: absolute;
+      content: "";
+      top: 27.5em;
+      left: 13em;
+      z-index: -1; }
 
-.main {
-  grid-column: col 5 / span 3;
-  display: grid;
-  grid-gap: 5px;
-  grid-template-columns: 1fr 1fr 1fr 1fr; }
+  .preamble {
+    grid-column: 1 / 4;
+    grid-row: 3; }
+    .preamble:before {
+      width: 0;
+      height: 0;
+      border-left: 1em solid transparent;
+      border-right: 1em solid transparent;
+      border-bottom: 2em solid white;
+      position: absolute;
+      content: "";
+      top: 27em;
+      left: 17em;
+      z-index: -1; }
+    .preamble:after {
+      width: 0;
+      height: 0;
+      border-left: 1em solid transparent;
+      border-right: 1em solid transparent;
+      border-top: 2em solid white;
+      position: absolute;
+      content: "";
+      top: 27.5em;
+      left: 17em;
+      z-index: -1; }
 
-.explanation {
-  grid-column: 1 / 2;
-  grid-row: 1; }
-  .explanation:before {
-    width: 0;
-    height: 0;
-    border-left: 1em solid transparent;
-    border-right: 1em solid transparent;
-    border-bottom: 2em solid white;
-    position: absolute;
-    content: "";
-    top: 32em;
-    left: 20em;
-    z-index: -1; }
-  .explanation:after {
-    width: 0;
-    height: 0;
-    border-left: 1em solid transparent;
-    border-right: 1em solid transparent;
-    border-top: 2em solid white;
-    position: absolute;
-    content: "";
-    top: 32.5em;
-    left: 20em;
-    z-index: -1; }
+  .main {
+    grid-column: col 5 / span 3;
+    display: grid;
+    grid-gap: 5px;
+    grid-template-columns: 1fr 1fr 1fr 1fr; }
 
-.participation {
-  grid-column: 3 / 4;
-  grid-row: 1; }
-  .participation:before {
-    width: 0;
-    height: 0;
-    border-left: 1em solid transparent;
-    border-right: 1em solid transparent;
-    border-bottom: 2em solid white;
-    position: absolute;
-    content: "";
-    top: 30em;
-    left: 26em;
-    z-index: -1; }
-  .participation:after {
-    width: 0;
-    height: 0;
-    border-left: 1em solid transparent;
-    border-right: 1em solid transparent;
-    border-top: 2em solid white;
-    position: absolute;
-    content: "";
-    top: 30.5em;
-    left: 26em;
-    z-index: -1; }
-
-.benefits {
-  grid-column: 1 / 2;
-  grid-row: 2; }
-  .benefits:before {
-    width: 0;
-    height: 0;
-    border-left: 1em solid transparent;
-    border-right: 1em solid transparent;
-    border-bottom: 2em solid white;
-    position: absolute;
-    content: "";
-    top: 24em;
-    left: 26em;
-    z-index: -1; }
-  .benefits:after {
-    width: 0;
-    height: 0;
-    border-left: 1em solid transparent;
-    border-right: 1em solid transparent;
-    border-top: 2em solid white;
-    position: absolute;
-    content: "";
-    top: 24.5em;
-    left: 26em;
-    z-index: -1; }
-
-.requirements {
-  grid-column: 3 / 4;
-  grid-row: 2; }
-
-.sidebar {
-  grid-column: col 11 / span 3;
-  display: grid;
-  grid-gap: 5px;
-  grid-template-columns: 1fr 1fr; }
-
-.wrapper {
-  background-color: lightgray; }
-  .wrapper > .design-selection {
-    grid-column: 1/ 2;
+  .explanation {
+    grid-column: 1 / 2;
     grid-row: 1; }
-  .wrapper > .design-archives {
+    .explanation:before {
+      width: 0;
+      height: 0;
+      border-left: 1em solid transparent;
+      border-right: 1em solid transparent;
+      border-bottom: 2em solid white;
+      position: absolute;
+      content: "";
+      top: 32em;
+      left: 20em;
+      z-index: -1; }
+    .explanation:after {
+      width: 0;
+      height: 0;
+      border-left: 1em solid transparent;
+      border-right: 1em solid transparent;
+      border-top: 2em solid white;
+      position: absolute;
+      content: "";
+      top: 32.5em;
+      left: 20em;
+      z-index: -1; }
+
+  .participation {
+    grid-column: 3 / 4;
+    grid-row: 1; }
+    .participation:before {
+      width: 0;
+      height: 0;
+      border-left: 1em solid transparent;
+      border-right: 1em solid transparent;
+      border-bottom: 2em solid white;
+      position: absolute;
+      content: "";
+      top: 30em;
+      left: 26em;
+      z-index: -1; }
+    .participation:after {
+      width: 0;
+      height: 0;
+      border-left: 1em solid transparent;
+      border-right: 1em solid transparent;
+      border-top: 2em solid white;
+      position: absolute;
+      content: "";
+      top: 30.5em;
+      left: 26em;
+      z-index: -1; }
+
+  .benefits {
     grid-column: 1 / 2;
     grid-row: 2; }
-  .wrapper.zen-resources {
-    grid-column: 1 / 2;
-    grid-row: 3; }
+    .benefits:before {
+      width: 0;
+      height: 0;
+      border-left: 1em solid transparent;
+      border-right: 1em solid transparent;
+      border-bottom: 2em solid white;
+      position: absolute;
+      content: "";
+      top: 24em;
+      left: 26em;
+      z-index: -1; }
+    .benefits:after {
+      width: 0;
+      height: 0;
+      border-left: 1em solid transparent;
+      border-right: 1em solid transparent;
+      border-top: 2em solid white;
+      position: absolute;
+      content: "";
+      top: 24.5em;
+      left: 26em;
+      z-index: -1; }
 
-footer {
-  grid-row: 9 / 10;
-  grid-column: 3 / 8; }
+  .requirements {
+    grid-column: 3 / 4;
+    grid-row: 2; }
 
+  .sidebar {
+    grid-column: col 11 / span 3;
+    display: grid;
+    grid-gap: 5px;
+    grid-template-columns: 1fr 1fr; }
+
+  .wrapper {
+    background-color: lightgray; }
+    .wrapper > .design-selection {
+      grid-column: 1/ 2;
+      grid-row: 1; }
+    .wrapper > .design-archives {
+      grid-column: 1 / 2;
+      grid-row: 2; }
+    .wrapper.zen-resources {
+      grid-column: 1 / 2;
+      grid-row: 3; }
+
+  footer {
+    grid-row: 9 / 10;
+    grid-column: 3 / 8; } }
 body {
   position: relative;
   background-color: #041322;
