updated with svg

--- a/zen-garden/zen-garden2/scss/partials/_variables.scss
+++ b/zen-garden/zen-garden2/scss/partials/_variables.scss
@@ -1,11 +1,16 @@
 /*color variables*/
 $main-bg: white;
-$secondary-bg: gray;
+$secondary-bg: lightgray;
 $font-color: black;
-$alt-font-color: blue;
-$big-sun: yellow;
-$main-background: red;
+$alt-font-color: coral;
+$main-background: gray;
 
+// Typography
+$all-text: 'Nunito Sans', sans-serif;
+$titles: 'Permanent Marker';
 
+$hover-color: coral;
 
-
+$header-color: white;
+$header1-size: 5rem;
+$header2-size: 2rem;
