--- a/zen-garden/zen-garden2/scss/style.scss
+++ b/zen-garden/zen-garden2/scss/style.scss
@@ -14,136 +14,4 @@
 /*layout */
 @import 'partials/layout';
 
-
-body {
-    // display: flex;
-    // flex-flow: column;
-    // align-items: flex-start;
-    background-color: $main-bg;
-    color: $font-color;
-
-    //margin: auto;
-}
-//.page-wrapper > div {
-
-    //margin: auto;
-//}
-
-header {
-    //Pretty cool sun right?
-
-    //padding: 1em 0;
-    //width: auto;
-    text-align: center;
-    color: $alt-font-color;
-    background-color: $big-sun;
-    border-radius: 0 0 150% 150%;
-}
-
-//header>* {
-
-//}
-//h1 {
-    //margin: 0;
-//}
-//.intro{
-    /*add CSS Rocket as background*/
-//}
-.preamble{
-    background-color: $secondary-bg;
-    color: $alt-font-color;
-    //width: 80%;
-    //margin: auto;
-}
-
-//.summary{
-    //width: 75%;
-   // margin: auto;
-
-//}
-//.main{
-   // display: flex;
-    //flex-flow: column nowrap;
-    //margin: 0 auto;
-    //width: 90%;
-//}
-//.main>div:nth-child(even) {
-    //& > h3 {
-        //text-align: center;
-    //}
-    //& > p {
-        //margin: auto;
-  //  }
-//}
-//.main>div:nth-child(odd) {
-    //& > h3 {
-        //text-align: center;
-    //}
-    //& > p {
-        //margin: auto;
-  //  }
-//}
-
-//.supporting{}
-
-//.participation{}
-
-//.requirements{}
-
-//.footer{
-    //text-align: center;
-   // align-content: space-between;
-    //padding: 10% 0;
-    //a:link{
-       // margin-right: 15px;
-  //  }
-//}
-
-//.sidebar{
-    //text-align: center;
-    //align-content: space-between;
-    //padding: 2% 0;
-    //margin: 10px;
-//}
-//.sidebar {
-    //margin-left: 0%;
-    //align-content: center;
-//}
-//.sidebar .wrapper {
-    //padding: 2%;
-    //display: flex;
-    //width: 100%;
-//}
-//.sidebar h3.select {
-
-    //margin: 0%;
-   // padding: 2%;
-    //display: inline;
-
-
-//}
-//.sidebar h3.archives {
-    //padding: 2%;
-    //margin: 0%;
-
-
-//}
-//.sidebar h3.resources {
-    //padding: 2%;
-    //margin: 0%;
-
-//}
-//.sidebar ul {
-    //margin: 5%;
-    //padding: 5%;
-//}
-//.sidebar li {
-    //display: block;
-    //padding-top: 1%;
-    //margin-bottom: 15%;
-    //list-style-type: none;
-//}
-
-//.design-archives{}
-
-//.zen-resources{};
+@import 'partials/planets';
