--- a/zen-garden/zen-garden2/scss/partials/_layout.scss
+++ b/zen-garden/zen-garden2/scss/partials/_layout.scss
@@ -75,6 +75,7 @@
     display: grid;
     grid-gap: 5px;
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 375px 30px 1fr 75px;
   }
 
     header {
@@ -85,12 +86,12 @@
 
     .summary {
         grid-column: 1 / 4;
-        grid-row: 2;
+        grid-row: 4;
           }
 
     .preamble {
         grid-column: 1 / 4;
-        grid-row: 3;
+        grid-row: 6;
           }
 
 
@@ -134,20 +135,20 @@
 
             &> .design-selection {
                  //Select a Design
-                    grid-column:  1/ 2;
+                    grid-column:  1/ 3;
                     grid-row: 1;
 
 
             }
             &> .design-archives {
                      //Archives
-                    grid-column: 1 / 2;
+                    grid-column: 1 / 3;
                     grid-row: 2;
 
             }
-            &.zen-resources {
+            &> .zen-resources {
                  //Resources
-                    grid-column: 1 / 2;
+                    grid-column: 1 / 3;
                     grid-row: 3;
 
             }
@@ -156,6 +157,6 @@
 
     //Footer
     footer  {
-        grid-row: 9 / 10;
-        grid-column: 3 / 8;
+        grid-column: 6 / span 3;
+        grid-row: 9;
     }
