--- a/zen-garden/zen-garden2/scss/partials/_typography.scss
+++ b/zen-garden/zen-garden2/scss/partials/_typography.scss
@@ -1,14 +1,19 @@
 @import url('https://fonts.googleapis.com/css?family=Abril+Fatface|Nanum+Brush+Script|Nanum+Myeongjo|Nunito+Sans|Permanent+Marker');
 
-$all-text: 'Nunito Sans', sans-serif;
-$titles: 'Permanent Marker';
+@import 'variables';
+
+
 
 //https://www.creativebloq.com/how-to/design-a-responsive-site-with-em-based-sizing
 //A website to explain ems
 body{
   margin: 0;
   font-family: $all-text;
-  font-size: 18px;
+      background-color: $main-bg;
+      color: $font-color;
+      background-color: $main-background;
+
+
 }
 
 .intro{
@@ -18,23 +23,25 @@ h1{
   margin: 0;
   padding: 0;
   font-family: $titles;
-  color: coral;
-  font-size: 4em;
+  color: $header-color;
+  font-size: $header1-size;
+  transform: rotate(-15deg);
+
 }
 
 h2{
   font-family: $all-text;
   margin: 5px;
   padding: 30px;
-  color: gray;
-  font-size: 2em;
+  color: $header-color;
+  font-size: $header2-size;
 }
 
 h3{
   margin: 5px;
   padding: 10px;
   font-family: $titles;
-  font-size: 40px;
+  font-size: 1rem;
   text-align: left;
 }
 
@@ -43,20 +50,24 @@ a{
 }
 a:hover{
   display: inline-block;
-  color: coral;
+  color: $hover-color;
   font-weight: bold;
   font-size: 36px;
   transform: perspective(3px) translateZ(0) scale(1);
   transition-duration: 1s;
   transition-property: transform;
 }
-.hvr-backward:hover, .hvr-backward:focus, .hvr-backward:active {
-  transform: translateX(-8px);
-}
+// .hvr-backward:hover, .hvr-backward:focus, .hvr-backward:active {
+//   transform: translateX(-8px);
+// }
 
 li{list-style-type: none;}
 
-.design-name{  background-color: gray;
-border-radius: 50%;
+.design-name{
   padding: 2px;
+}
+
+.participation{
+  font-size: 8px;
+  // transform: scale(2);
 }
