--- a/zen-garden/zen-garden2/scss/style.scss
+++ b/zen-garden/zen-garden2/scss/style.scss
@@ -15,5 +15,6 @@
 @import 'partials/layout';
 
 // graphics
+@import 'partials/aliens';
 @import 'partials/planets';
 @import 'partials/footerIcons';
