--- a/zen-garden/zen-garden2/scss/partials/_breakpoints.scss
+++ b/zen-garden/zen-garden2/scss/partials/_breakpoints.scss
@@ -1,16 +1,16 @@
-$break-small: 25em;   //400px 
+$break-small: 25em;   //400px
 $break-medium: 46.8em;   //750px
 $break-large: 67.5em;  //1080px
 
 @mixin breakpoint($break) {
-@if $break == large {
-@media (min-width: $break-large) { @content; }
+@if $break == small {
+@media (max-width: $break-small) { @content; }
 }
 @else if $break == medium {
-@media (min-width: $break-medium) { @content; }
+@media (max-width: $break-medium) { @content; }
 }
-@else if $break == small {
-@media (min-width: $break-small) { @content; }
+@else if $break == large {
+@media (max-width: $break-large) { @content; }
 } @else {
 @media ($break) { @content; }
 }
